Update `portfolio.component.html` to include project display and links
* Add HTML structure for portfolio section
* Include project items with images, titles, and descriptions
* Add links to project detail pages using `routerLink`
* Add necessary CSS and JavaScript references for styling and functionality
* Include preloader, header, and footer sections
* Add portfolio filter options for different project categories
* Add AJAX portfolio container for project details

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -28,3 +28,251 @@
         </div>
     </div>
 </div>
+
+<!doctype html>
+<html lang="en">
+
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" type="image/png" href="images/favicon.png">
+
+    <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700" rel="stylesheet">
+    <link rel="stylesheet" href="lib/icons/css/material-design-iconic-font.min.css">
+    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="lib/animate/animate.css">
+    <link rel="stylesheet" href="lib/owlcarousel/owl.carousel.min.css">
+    <link rel="stylesheet" href="lib/magnific/magnific-popup.css">
+    <link class="color-mode" rel="stylesheet" href="css/styles.css">
+    <link class="color-change" rel="stylesheet" href="css/blue.css">
+    <script src="https://kit.fontawesome.com/bbe98df1ca.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"
+        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="js/header-control.js"></script>
+
+    <script src="lib/portfolio/js/modernizr.js"></script>
+    <title>Alvaro Leandro</title>
+</head>
+
+<body>
+    <!--Preloader-->
+    <div class="load-wrapp">
+        <div class="effect">
+            <p>Álvaro Leandro Cavalcante</p>
+            <div class="bar"></div>
+        </div>
+    </div>
+    <!--.Preloader-->
+
+    <div class="header mobile">
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <h1>Álvaro Leandro Cavalcante</h1>
+    </div>
+    <div class="all">
+        <div class="left-content">
+            <div class="left-scroll">
+                <div class="img-avata">
+                    <img src="images/alvaro3.jpg" alt="avata" class="zoom">
+                </div>
+                <h4 class="title-port">Álvaro Leandro Cavalcante</h4>
+                <div id="header"></div>
+                <div id="footer" class="footer-box"></div>
+            </div>
+        </div>
+
+        <div class="right-content">
+            <div class="right-wrap right-page right-portfolio">
+                <div class="container-fruit">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="title-page">
+                                <h1>Portfolio</h1>
+                                <p>Trabalhos realizados</p>
+                            </div>
+                        </div>
+
+                        <div class="col-12 m-t-30">
+                            <!--Porfolio Section Start-->
+                            <section id="portfolio" class="portfolio-section pt-page">
+                                <div class="section-container">
+
+                                    <div class="row">
+                                        <div class="col-md-12 portfolio-filter text-center">
+                                            <ul>
+                                                <li class="active" data-filter="*">Tudo</li>
+                                                <li data-filter=".software">Software</li>
+                                                <li data-filter=".dtscience">Data Science</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+
+                                    <!--Portfolio Items-->
+                                    <div class="row portfolio-items">
+
+                                        <div class="item col-lg-4 col-md-4 col-sm-6 software">
+                                            <a class="ajax-link" href="port_napkinn_app.html">
+                                                <figure>
+                                                    <img src="images/napkinn.png" alt="">
+                                                    <figcaption>
+                                                        <h4>Napkinn Health</h4>
+                                                        <p>software</p>
+                                                    </figcaption>
+                                                </figure>
+                                            </a>
+                                        </div>
+
+                                        <div class="item col-lg-4 col-md-4 col-sm-6 dtscience">
+                                            <a class="ajax-link" href="port_coffee.html">
+                                                <figure>
+                                                    <img src="images/coffee.png" alt="">
+                                                    <figcaption>
+                                                        <h4>Detecção de Fitopatologias no Café</h4>
+                                                        <p>Data Science</p>
+                                                    </figcaption>
+                                                </figure>
+                                            </a>
+                                        </div>
+
+                                        <div class="item col-lg-4 col-md-4 col-sm-6 dtscience">
+                                            <a class="ajax-link" href="port_libras.html">
+                                                <figure>
+                                                    <img src="images/libras.jpg" alt="">
+                                                    <figcaption>
+                                                        <h4>Reconhecimento de Linguagem Brasileira de Sinais (LIBRAS)</h4>
+                                                        <p>Data Science</p>
+                                                    </figcaption>
+                                                </figure>
+                                            </a>
+                                        </div>
+
+                                        <div class="item col-lg-4 col-md-4 col-sm-6 dtscience">
+                                            <a class="ajax-link" href="port_coffee_quantix.html">
+                                                <figure>
+                                                    <img src="images/quantix_cerc_4.jpeg" alt="">
+                                                    <figcaption>
+                                                        <h4>Detecção de Fitopatologias no Café</h4>
+                                                        <p>Data Science</p>
+                                                    </figcaption>
+                                                </figure>
+                                            </a>
+                                        </div>
+
+                                        <div class="item col-lg-4 col-md-4 col-sm-6 software">
+                                            <a class="ajax-link" href="port_bi.html">
+                                                <figure>
+                                                    <img src="images/bi.png" alt="">
+                                                    <figcaption>
+                                                        <h4>Plataforma de BI em saúde</h4>
+                                                        <p>software</p>
+                                                    </figcaption>
+                                                </figure>
+                                            </a>
+                                        </div>
+
+                                        <div class="item col-lg-4 col-md-4 col-sm-6 dtscience">
+                                            <a class="ajax-link" href="port_nkia.html">
+                                                <figure>
+                                                    <img src="images/supermarket.jpg" alt="">
+                                                    <figcaption>
+                                                        <h4>Classificação de produtos com PLN</h4>
+                                                        <p>Data Science</p>
+                                                    </figcaption>
+                                                </figure>
+                                            </a>
+                                        </div>
+                                        
+                                        <div class="item col-lg-4 col-md-4 col-sm-6 dtscience">
+                                            <a class="ajax-link" href="port_gfk.html">
+                                                <figure>
+                                                    <img src="images/mercado1.png" alt="">
+                                                    <figcaption>
+                                                        <h4>Detecção de produtos de supermercado</h4>
+                                                        <p>Data Science</p>
+                                                    </figcaption>
+                                                </figure>
+                                            </a>
+                                        </div>
+
+                                        <div class="item col-lg-4 col-md-4 col-sm-6 software">
+                                            <a class="ajax-link" href="port_odonto.html">
+                                                <figure>
+                                                    <img src="images/odonto.png" alt="">
+                                                    <figcaption>
+                                                        <h4>Sistema odontológico</h4>
+                                                        <p>software</p>
+                                                    </figcaption>
+                                                </figure>
+                                            </a>
+                                        </div>
+
+                                        <div class="item col-lg-4 col-md-4 col-sm-6 software">
+                                            <a class="ajax-link" href="port_disc.html">
+                                                <figure>
+                                                    <img src="images/disc5.png" alt="">
+                                                    <figcaption>
+                                                        <h4>Sistema DISC</h4>
+                                                        <p>software</p>
+                                                    </figcaption>
+                                                </figure>
+                                            </a>
+                                        </div>
+
+                                        <div class="item col-lg-4 col-md-4 col-sm-6 dtscience">
+                                            <a class="ajax-link" href="port_tsoda.html">
+                                                <figure>
+                                                    <img src="images/catdog.png" alt="">
+                                                    <figcaption>
+                                                        <h4>TensorFlow - Arquitetura Semi-Supervisionada para Detecção de Objetos</h4>
+                                                        <p>Data Science</p>
+                                                    </figcaption>
+                                                </figure>
+                                            </a>
+                                        </div>
+                                                            
+                                    </div>
+                                </div>
+                            </section>
+                            <!--Porfolio Section End-->
+                        </div>
+                        <div class="m-t-30"></div>
+                    </div>
+                </div>
+                <!-- Line Bg Effect -->
+                <div class="line-bg">
+                    <div class="line-item"></div>
+                    <div class="line-item"></div>
+                    <div class="line-item"></div>
+                </div>
+                <!-- .Line Bg Effect -->
+            </div>
+        </div>
+    </div>
+
+    <!--Ajax Portfolio Container Start-->
+    <div class="ajax-portfolio-popup">
+        <span class="ajax-loader"></span>
+        <div class="navigation-wrap">
+            <span class="popup-close"><i class="zmdi zmdi-close zmdi-hc-fw"></i></span>
+        </div>
+        <div class="content-wrap">
+            <div class="popup-content"></div>
+        </div>
+    </div>
+    <!--Ajax Portfolio Container End-->
+
+    <script type="text/javascript" src="lib/jquery.min.js"></script>
+    <script type="text/javascript" src="lib/owlcarousel/owl.carousel.js"></script>
+    <script type="text/javascript" src="lib/bootstrap/js/popper.min.js"></script>
+    <script type="text/javascript" src="lib/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="lib/magnific/jquery.magnific-popup.min.js"></script>
+    <script type="text/javascript" src="lib/portfolio/js/isotope.pkgd.min.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
+</body>
+
+</html>
