--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -17,6 +17,9 @@
 
         <!-- Portfolio Section -->
         <div class="col-md-9">
+            <!-- Navbar -->
+            <app-navbar></app-navbar>
+
             <!-- Search Bar -->
             <div class="mb-4">
                 <div class="input-group">
