--- a/src/app/portfolio/project-detail.component.html
+++ b/src/app/portfolio/project-detail.component.html
@@ -1,6 +1,7 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-md-12">
+      <app-navbar></app-navbar>
       <h2>{{ project.name }}</h2>
       <p>{{ project.description }}</p>
       <h4>Technologies Used</h4>
