--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,4 +1,7 @@
-<div class="container mt-5">
+<div class="container-fluid" style="min-height: -webkit-fill-available; overflow-y: auto;">
+    <!-- Navbar -->
+    <app-navbar></app-navbar>
+
     <div class="row">
         <!-- Sidebar -->
         <div class="col-md-3">
@@ -17,8 +20,6 @@
 
         <!-- Portfolio Section -->
         <div class="col-md-9">
-            <!-- Navbar -->
-            <app-navbar></app-navbar>
 
             <!-- Search Bar -->
             <div class="mb-4">
@@ -43,7 +44,8 @@
             <div class="row">
                 <ng-container *ngFor="let repo of filteredRepos">
                     <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
-                        <div class="card project-card" (mouseover)="showProjectInfo(repo.name)" (mouseout)="hideProjectInfo(repo.name)">
+                        <div class="card project-card" (mouseover)="showProjectInfo(repo.name)"
+                            (mouseout)="hideProjectInfo(repo.name)">
                             <img *ngIf="repo.imageUrl" [src]="repo.imageUrl" class="card-img-top" [alt]="repo.name">
                             <div class="card-body">
                                 <h5 class="card-title">{{ repo.name }}</h5>
@@ -69,7 +71,8 @@
             <!-- Carousel for Project Images and Videos -->
             <div id="projectCarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item" *ngFor="let repo of filteredRepos; let i = index" [ngClass]="{'active': i === 0}">
+                    <div class="carousel-item" *ngFor="let repo of filteredRepos; let i = index"
+                        [ngClass]="{'active': i === 0}">
                         <img *ngIf="repo.imageUrl" [src]="repo.imageUrl" class="d-block w-100" [alt]="repo.name">
                         <video *ngIf="repo.videoUrl" class="d-block w-100" controls>
                             <source [src]="repo.videoUrl" type="video/mp4">
