--- a/src/app/secondary-components/project-detail/project-detail.component.html
+++ b/src/app/secondary-components/project-detail/project-detail.component.html
@@ -1,4 +1,5 @@
-<div class="container mt-5">
+<div class="container-fluid" style="min-height: -webkit-fill-available; overflow-y: auto;">
+  <app-navbar></app-navbar>
   <div class="row">
     <div class="col-md-12">
       <h2>{{ project.name }}</h2>
