--- a/src/app/secondary-components/footer/footer.component.html
+++ b/src/app/secondary-components/footer/footer.component.html
@@ -1,25 +1,7 @@
 <footer>
   <div class="footer-container">
     <div class="footer-section">
-      <h5>Contact Information</h5>
-      <p>Email: example@example.com</p>
-      <p>Phone: (123) 456-7890</p>
-    </div>
-    <div class="footer-section">
-      <h5>Social Media</h5>
-      <a href="https://www.facebook.com" target="_blank" aria-label="Facebook">
-        <i class="fab fa-facebook"></i>
-      </a>
-      <a href="https://www.twitter.com" target="_blank" aria-label="Twitter">
-        <i class="fab fa-twitter"></i>
-      </a>
-      <a href="https://www.linkedin.com" target="_blank" aria-label="LinkedIn">
-        <i class="fab fa-linkedin"></i>
-      </a>
-    </div>
-    <div class="footer-section">
-      <h5>Privacy Policy</h5>
-      <a [routerLink]="['/privacy-policy']" aria-label="Privacy Policy">Privacy Policy</a>
+      <a translate [routerLink]="['/privacy-policy']" aria-label="Privacy Policy">privacy_policy.title</a>
     </div>
   </div>
   <div class="back-to-top">
