--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,12 +20,50 @@
         </div>
         <!-- Icon section -->
         <app-icones></app-icones>
+        <!-- Blog section -->
+        <div class="d-flex align-items-start ms-3 me-3 mt-5">
+            <h5 translate>home.blog</h5> <!-- Blog section heading -->
+        </div>
+        <div class="d-flex align-items-start ms-4 me-4 sobre_text">
+            <p class="text-justify" [innerHTML]="'home.blog_description' | translate"></p>
+        </div>
+        <!-- Testimonials section -->
+        <div class="d-flex align-items-start ms-3 me-3 mt-5">
+            <h5 translate>home.testimonials</h5> <!-- Testimonials section heading -->
+        </div>
+        <div class="d-flex align-items-start ms-4 me-4 sobre_text">
+            <p class="text-justify" [innerHTML]="'home.testimonials_description' | translate"></p>
+        </div>
+        <!-- Social sharing buttons -->
+        <div class="d-flex align-items-start ms-3 me-3 mt-5">
+            <h5 translate>home.share</h5> <!-- Social sharing section heading -->
+        </div>
+        <div class="d-flex align-items-start ms-4 me-4 sobre_text">
+            <a href="https://twitter.com/share?url={{currentUrl}}" target="_blank" aria-label="Share on Twitter">
+                <fa-icon [icon]="['fab', 'twitter']"></fa-icon>
+            </a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u={{currentUrl}}" target="_blank" aria-label="Share on Facebook">
+                <fa-icon [icon]="['fab', 'facebook']"></fa-icon>
+            </a>
+            <a href="https://www.linkedin.com/shareArticle?mini=true&url={{currentUrl}}" target="_blank" aria-label="Share on LinkedIn">
+                <fa-icon [icon]="['fab', 'linkedin']"></fa-icon>
+            </a>
+        </div>
+        <!-- Newsletter signup form -->
+        <div class="d-flex align-items-start ms-3 me-3 mt-5">
+            <h5 translate>home.newsletter</h5> <!-- Newsletter section heading -->
+        </div>
+        <div class="d-flex align-items-start ms-4 me-4 sobre_text">
+            <form>
+                <div class="mb-3">
+                    <label for="email" class="form-label" translate>home.newsletter_email</label>
+                    <input type="email" class="form-control" id="email" aria-describedby="emailHelp" required>
+                </div>
+                <button type="submit" class="btn btn-primary" translate>home.newsletter_subscribe</button>
+            </form>
+        </div>
     </div>
     <div class="col-lg-5 mh-100 imgPrincipal">
         <!-- Placeholder for image content -->
     </div>
 </div>
-
-<!-- <div class="row" style="min-height:100%; overflow-y: auto;">
-  <p translate [translateParams]="{name: 'Andreas'}">demo.greeting</p>
-</div> -->
