--- a/src/app/m-home/m-home.component.html
+++ b/src/app/m-home/m-home.component.html
@@ -19,6 +19,36 @@
 
     <app-icones class="mb-3"></app-icones>
 
+    <!-- Social sharing buttons -->
+    <div class="d-flex align-items-start ms-3 me-3 mt-5">
+      <h5 translate>home.share</h5> <!-- Social sharing section heading -->
+    </div>
+    <div class="d-flex justify-content-center">
+      <a href="https://twitter.com/share?url={{currentUrl}}" target="_blank" aria-label="Share on Twitter">
+        <fa-icon [icon]="['fab', 'twitter']"></fa-icon>
+      </a>
+      <a href="https://www.facebook.com/sharer/sharer.php?u={{currentUrl}}" target="_blank" aria-label="Share on Facebook">
+        <fa-icon [icon]="['fab', 'facebook']"></fa-icon>
+      </a>
+      <a href="https://www.linkedin.com/shareArticle?mini=true&url={{currentUrl}}" target="_blank" aria-label="Share on LinkedIn">
+        <fa-icon [icon]="['fab', 'linkedin']"></fa-icon>
+      </a>
+    </div>
+
+    <!-- Newsletter signup form -->
+    <div class="d-flex align-items-start ms-3 me-3 mt-5">
+      <h5 translate>home.newsletter</h5> <!-- Newsletter section heading -->
+    </div>
+    <div class="d-flex justify-content-center">
+      <form>
+        <div class="mb-3">
+          <label for="email" class="form-label" translate>home.newsletter_email</label>
+          <input type="email" class="form-control" id="email" aria-describedby="emailHelp" required>
+        </div>
+        <button type="submit" class="btn btn-primary" translate>home.newsletter_subscribe</button>
+      </form>
+    </div>
+
   </div>
   <!--   <div id="particles-js">
     abcd
